--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,12 +34,9 @@ services:
     image: mongo:latest
     container_name: mongo
     ports:
-        - "27017:27017"
+      - "27017:27017"
     volumes:
-        - mongo_data:/data/db
+      - mongodb_data:/data/db
 
 volumes:
-  rabbitmq_data:
-    driver: local
-  mongo_data:
-    driver: local
+  mongodb_data:
